--- a/templates/search.html
+++ b/templates/search.html
@@ -47,7 +47,7 @@
                 {% for toy in toys %}
                     <div class="toy-card">
                         <div class="toy-image">
-                            <img src="{{ toy.image_url }}" alt="{{ toy.name }}">
+                            <img src="{{ url_for('static', filename=toy.image_url) }}" alt="{{ toy.name }}">
                         </div>
                         <div class="toy-content">
                             <h3>{{ toy.name }}</h3>
