--- a/static/css/themes.css
+++ b/static/css/themes.css
@@ -52,7 +52,7 @@
     --primary-color-rgb: 255, 152, 0;
 }
 
-/* Tema Patriótico */
+/* Tema Patriotico */
 [data-theme='patriotic'] {
     --primary-color: #006847;
     --secondary-color: #ce1126;
