--- a/templates/500.html
+++ b/templates/500.html
@@ -6,13 +6,13 @@
 <div class="auth-container">
     <div class="auth-card">
         <div class="auth-header">
-            <h2>😱 ¡Oops! Algo salió mal</h2>
+            <h2>😱 ¡Oops! Algo salio mal</h2>
             <p class="auth-subtitle">Hubo un error en el servidor</p>
         </div>
         
         <div class="error-content">
             <p>500 - Error Interno del Servidor</p>
-            <p>Estamos trabajando para solucionarlo. Por favor, inténtalo de nuevo más tarde.</p>
+            <p>Estamos trabajando para solucionarlo. Por favor, intentalo de nuevo mas tarde.</p>
             
             <a href="{{ url_for('shop.index') }}" class="auth-button">
                 🏠 Volver al Inicio
