--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
-{% block title %}Página no Encontrada{% endblock %}
+{% block title %}Pagina no Encontrada{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-8 offset-md-2 text-center">
             <h1 class="display-1">404</h1>
-            <h2>¡Ups! Página no encontrada.</h2>
-            <p class="lead">Lo sentimos, la página que estás buscando no existe o ha sido movida.</p>
+            <h2>¡Ups! Pagina no encontrada.</h2>
+            <p class="lead">Lo sentimos, la pagina que estas buscando no existe o ha sido movida.</p>
             <a href="{{ url_for('shop.index') }}" class="btn btn-primary mt-3">Volver al Inicio</a>
         </div>
     </div>
