--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -7,8 +7,8 @@
     <div class="row">
         <div class="col-md-8 offset-md-2 text-center">
             <h1 class="display-1">500</h1>
-            <h2>¡Ups! Algo salió mal.</h2>
-            <p class="lead">Lo sentimos, estamos experimentando un problema interno. Por favor, inténtalo de nuevo más tarde.</p>
+            <h2>¡Ups! Algo salio mal.</h2>
+            <p class="lead">Lo sentimos, estamos experimentando un problema interno. Por favor, intentalo de nuevo mas tarde.</p>
             <a href="{{ url_for('shop.index') }}" class="btn btn-primary mt-3">Volver al Inicio</a>
         </div>
     </div>
