--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -8,7 +8,7 @@
         <div class="col-md-8 offset-md-2 text-center">
             <h1 class="display-1">403</h1>
             <h2>Acceso Denegado</h2>
-            <p class="lead">Lo sentimos, no tienes permiso para acceder a esta página.</p>
+            <p class="lead">Lo sentimos, no tienes permiso para acceder a esta pagina.</p>
             <a href="{{ url_for('shop.index') }}" class="btn btn-primary mt-3">Volver al Inicio</a>
         </div>
     </div>
